# mentionary-bot

./: Dockerfile  LICENSE.txt  README.md  agent.py  app.py  pyproject.toml  schemas.py  tools.py
.github/workflows/: python-lint.yml  terraform-resource-check.yml
terraform/: google.tf
